tests/baselines/reference/declarationEmitInvalidReference2.errors.txt
declarationEmitInvalidReference2.ts(1,22): error TS6053: File 'invalid.ts' not found.


==== declarationEmitInvalidReference2.ts (1 errors) ====
    /// <reference path="invalid.ts" />
                         ~~~~~~~~~~
!!! error TS6053: File 'invalid.ts' not found.
    var x = 0;